0.0.9
* using bespin as editor
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.9.editor.jpg
* internal assets serving
* bugfix: wrong method name in cfm

0.0.8
* git (with remotes) support
* simply editor
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.8.editor.jpg
* ugly styling in dashboard
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.8.dashboard.jpg
* bugfix: spelling of collspan -> colspan

0.0.7
* listing scenarios in dashboard
* aggregator for based on two dimensions
> Viewing dashboard
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.7.dashboard.jpg

0.0.6
* basic tag filtering
* keeping user setting in cookie

0.0.5
Business Overview - dashboard
> Viewing dashobard
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.5.dashboard.jpg
* scheduling features
* features specyfication

0.0.4
* core development