@@ -5,7 +5,7 @@
   <title>Documentation</title>
   <link href="<%= asset_link('stylesheets/BespinEmbedded.compressed.css') -%>" media="screen" rel="stylesheet" type="text/css"/>
   <script src="<%= asset_link('javascripts/BespinEmbedded.compressed.js') -%>"></script>
-  <link href="/stylesheets/layout.css" rel="stylesheet" media="screen" rel="stylesheet" type="text/css"/>
+  <link href="<%= asset_link('stylesheets/layout.css') -%>" rel="stylesheet" media="screen" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div id="container">
